# RetroRoost

./: .gitignore  mediadb.sqlite  userdb.sqlite
RetroRoostQT/: CMakeLists.txt  main.cpp
RetroRoostQT/QML/: CreateAccount.qml  HomePage.qml  LoginScreen.qml  SplashScreen.qml  main.qml  test.qml
RetroRoostQT/QML/Components/: NavigationBar.qml
RetroRoostQT/QML/Pages/: CreateAccount.qml  HomePage.qml  SplashScreen.qml
RetroRoostQT/Resources/: qml.qrc
RetroRoostQT/src/: AuthorizationManager.cpp  DatabaseManager.cpp  DatabaseManager.h
RetroRoostQT/src/User/: User.h  UserRepository.cpp  UserRepository.h
RetroRoostQT/src/core/: AuthorizationManager.cpp  AuthorizationManager.h  DatabaseManager.cpp  DatabaseManager.h
RetroRoostQT/src/repositories/: UserRepository.cpp  UserRepository.h
